--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
+    "@zohocrm/nodejs-sdk": "^2.0.0",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "crypto": "^1.0.1",
