--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "dependencies": {
     "@zohocrm/nodejs-sdk": "^2.0.0",
     "axios": "^1.7.9",
+    "axios-retry": "^4.5.0",
     "body-parser": "^1.20.3",
     "crypto": "^1.0.1",
+    "date-fns": "^4.1.0",
     "express": "^4.21.2",
-    "ngrok": "^5.0.0-beta.2"
+    "ngrok": "^5.0.0-beta.2",
+    "node-cache": "^5.1.2",
+    "node-fetch": "^3.3.2"
   }
 }
