--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.3",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "ngrok": "^5.0.0-beta.2",
     "node-cache": "^5.1.2",
